// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTopHits service should list top hits for a given search index and params 1`] = `
Array [
  Object {
    "count": 17,
    "hit": "db1f8fe3-392f-4427-b070-ecc7b35b31b1",
  },
]
`;

exports[`getTopHitsForCsv service should list csv formatted top hits for a given search index 1`] = `
Array [
  Object {
    "contentItemId": "db1f8fe3-392f-4427-b070-ecc7b35b31b1",
    "count": 17,
  },
]
`;
